# trace-deck

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
scripts/: README.md
scripts/unix/: build.sh  cleanup.sh
scripts/windows/: context-menu.bat  context-menu.ps1
src/: error.rs  lib.rs  main.rs  models.rs  ui.rs
src/extractors/: mod.rs
src/parsers/: mod.rs
src/processors/: mod.rs
tests/: integration_tests.rs
